First skeleton of a frontend and backend

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,8 +32,6 @@
         ]
       }
     },
-    // Add your own post creation commands here
-    // Add the Python packages that you use to requirements.txt
+    // Add your own post creation commands at the end of post-create.sh
     "postCreateCommand": ".devcontainer/post-create.sh"
   }
-  
