--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "hello-ai-world"
+name = "hello_ai_world"
 version = "0.1.0"
-description = "AI GBB Application Template"
+description = "AI Application chassis - best AI app practices optimized for Azure"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
