--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel >=6.29.5,<7.0.0",
     "ipywidgets >=8.1.5,<9.0.0",
-    "python-dotenv >=1.0.1,<1.2.0",
+    "python-dotenv ~=1.0.1",
 ]
 
 [tool.uv.workspace]
