--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -7,5 +7,5 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi ~=0.115.6",
     "uvicorn ~=0.32.1",
-    "python-dotenv >=1.0.1,<1.2.0",
+    "python-dotenv ~=1.0.1",
 ]
