--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "streamlit ~=1.41.1",
     "requests ~=2.32.3",
-    "azure-identity ~=1.19.0",    
+    "azure-identity ~=1.19.0",
+    "python-dotenv ~=1.0.1",
 ]
