--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -13,17 +13,33 @@ ENV UV_LINK_MODE=copy \
     UV_PYTHON=python3.12 \
     UV_PROJECT_ENVIRONMENT=/app/.venv
 
-COPY pyproject.toml /app/
-COPY uv.lock /app/
-COPY src/frontend /app/src/frontend/
 
-RUN --mount=type=cache,target=/root/.cache <<EOT
+## install depdencies first as they change less often
+
+COPY uv.lock pyproject.toml .python-version /app/
+COPY src/hello-ai-world-core/.python-version /app/src/hello-ai-world-core/
+COPY src/hello-ai-world-core/pyproject.toml /app/src/hello-ai-world-core/
+COPY src/frontend/pyproject.toml /app/src/frontend/
+COPY src/frontend/.python-version /app/src/frontend/
+RUN --mount=type=cache,target=/root/.cache/uv <<EOT
 uv sync \
     --frozen \
     --no-dev \
     --no-install-workspace \
     --no-editable \
-    --project src/frontend
+    --all-packages
+EOT
+
+## install the frontend last as it changes most often
+
+COPY src/hello-ai-world-core /app/src/hello-ai-world-core
+COPY src/frontend /app/src/frontend
+RUN --mount=type=cache,target=/root/.cache/uv <<EOT
+uv sync \
+    --frozen \
+    --no-dev \
+    --no-editable \
+    --project src/frontend    
 EOT
 
 ###############
@@ -33,9 +49,6 @@ EOT
 FROM python:3.12-slim
 
 SHELL ["sh", "-exc"]
-
-# Optional: add the application virtualenv to search path.
-ENV PATH=/app/.venv/bin:$PATH
 
 RUN <<EOT
 groupadd -r app
@@ -49,4 +62,4 @@ COPY --from=builder --chown=app:app /app/.venv /app/.venv
 COPY --from=builder --chown=app:app /app/src/frontend /app/src/frontend
 
 WORKDIR /app/src/frontend
-ENTRYPOINT ["streamlit", "run", "app.py", "--server.port=8000", "--server.address=0.0.0.0"]
+ENTRYPOINT ["/app/.venv/bin/streamlit", "run", "app.py", "--server.port=8000", "--server.address=0.0.0.0"]
