--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,14 @@ dependencies = [
     "ipykernel >=6.29.5,<7.0.0",
     "ipywidgets >=8.1.5,<9.0.0",
     "python-dotenv ~=1.0.1",
+    "hello-ai-world-core",
 ]
 
 [tool.uv.workspace]
-members = ["src/backend", "src/frontend"]
+members = ["src/backend", "src/frontend", "src/hello-ai-world-core"]
+
+[tool.uv.sources]
+hello-ai-world-core = { workspace = true }
 
 [tool.ruff]
 target-version = "py311"
@@ -22,10 +26,10 @@ src = ["src"]
 select = ["E", "F", "I", "UP"]
 
 [tool.ruff.lint.isort]
-known-first-party = ["quartapp"]
+known-first-party = ["fastapi"]
 
 [tool.black]
-target-version =  ["py311"]
+target-version =  ["py312"]
 line-length = 120
 
 [tool.pytest.ini_options]
