--- a/azure.yaml
+++ b/azure.yaml
@@ -7,6 +7,7 @@ services:
     docker:
       path: ./Dockerfile
       context: ../..
+      remoteBuild: true
   frontend:
     language: python
     project: src/frontend
@@ -14,6 +15,7 @@ services:
     docker:
       path: ./Dockerfile
       context: ../..
+      remoteBuild: true
 hooks:
   preprovision:
   #  windows:
