--- a/azure.yaml
+++ b/azure.yaml
@@ -1,3 +1,4 @@
+# see https://learn.microsoft.com/en-us/azure/developer/azure-developer-cli/azd-schema
 name: hello-ai-world
 services:
   backend:
@@ -6,18 +7,14 @@ services:
     host: containerapp
     docker:
       path: ./Dockerfile
-      context: ../..
-      remoteBuild: true # set to false if you want to build Docker images locally on your machine
-      # see https://learn.microsoft.com/en-us/azure/developer/azure-developer-cli/azd-schema#docker-options-sample
+      remoteBuild: true
   frontend:
     language: python
     project: src/frontend
     host: containerapp
     docker:
       path: ./Dockerfile
-      context: ../..
-      remoteBuild: true # set to false if you want to build Docker images locally on your machine
-      # see https://learn.microsoft.com/en-us/azure/developer/azure-developer-cli/azd-schema#docker-options-sample
+      remoteBuild: true
 hooks:
   preprovision:
   #  windows:
