--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi ~=0.115.6",
     "uvicorn ~=0.32.1",
-    "python-dotenv ~=1.0.1"
+    "python-dotenv ~=1.0.1",
+    "pyyaml>=6.0.2",
+    "semantic-kernel>=1.17.1",
 ]
