--- a/src/backend/agents/critic.yaml
+++ b/src/backend/agents/critic.yaml
@@ -11,5 +11,4 @@ instructions: |
     - Writer is ethical
     - Blogpost is optimised for SEO
 
-  - Provide a score out of 10
-  - If you are satisfied with the blogpost, explicitly state this
+  - YOU MUST provide a score out of 10 WITH EVERY EVALUATION
