--- a/src/backend/agents/writer.yaml
+++ b/src/backend/agents/writer.yaml
@@ -11,3 +11,4 @@ instructions: |
   - Write a concise blogpost on the topic - 200 words limit 
   - If the history includes recommendation from the Critic, rewrite the blog and incorporate the recommendation 
   - ALWAYS sign the blogpost with the date that you will get from the provided "time" plugin
+  - YOU MUST PROVIDE ONLY THE BLOGPOST CONTENT. DO NOT THANK, GREET, OR INTERACT WITH THE USER OR THE EVALUATOR IN ANY WAY.
