--- a/src/backend/agents/critic.yaml
+++ b/src/backend/agents/critic.yaml
@@ -11,4 +11,4 @@ instructions: |
     - Writer is ethical
     - Blogpost is optimised for SEO
 
-  - YOU MUST provide a score out of 10 WITH EVERY EVALUATION
+  - YOU ABSOLUTELY MUST provide an overall score out of 10 
