--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "python-dotenv ~=1.0.1",
     "pyyaml>=6.0.2",
     "semantic-kernel>=1.17.1",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
+    "opentelemetry-instrumentation>=0.50b0",
 ]
