--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -7,5 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "streamlit ~=1.41.1",
     "requests ~=2.32.3",
-    "python-dotenv ~=1.0.1"
+    "python-dotenv ~=1.0.1",
 ]
