--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "uvicorn ~=0.32.1",
     "python-dotenv ~=1.0.1",
     "pyyaml>=6.0.2",
+    "openai>=1.61.0",
     "semantic-kernel>=1.20.0",
     "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
     "opentelemetry-instrumentation>=0.50b0",
