--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -32,6 +32,8 @@ RUN uv sync \
 
 COPY *.py /app/
 COPY agents /app/agents
+COPY patterns /app/patterns
+COPY utils /app/utils
 
 ###############
 # Final image #
